Trying to fix the line-clamp; changed the spacing and padding on all elements in the site-content

--- a/assets/css/site/layout.css
+++ b/assets/css/site/layout.css
@@ -16,7 +16,9 @@
 
 .site-main {
   flex-grow: 1;
+  padding: 5rem 20rem;
   display: flex;
+  gap: 6rem;
   flex-direction: column;
   overflow-x: clip;
 }
